Dark Mode Switcher position fixed

--- a/react-app/src/assets/css/DarkMode.css
+++ b/react-app/src/assets/css/DarkMode.css
@@ -1,7 +1,8 @@
 
 .DarkMode {
     margin: 20px;
-    float: right;
+    position: fixed;
+    right: 0;
     font-size: 12px;
 }
 
